--- a/templates/route/view.html.twig
+++ b/templates/route/view.html.twig
@@ -39,7 +39,19 @@
                 this.angle = event.detail;
             },
             accRatings: {{ acc_ratings|json_encode|raw }},
-            accGrades: {{ acc_grades|json_encode|raw }}
+            accGrades: {{ acc_grades|json_encode|raw }},
+            logCounts: {{ log_counts|json_encode|raw }},
+            {% if app.user %}
+            userCounts: {{ user_counts|json_encode|raw }},
+            {% endif %}
+            getAccentsText() {
+                const accentCount = this.logCounts.hasOwnProperty(this.angle) ? this.logCounts[this.angle] : 0;
+                console.log('userCounts' in this);
+                if ('userCounts' in this && this.userCounts.hasOwnProperty(this.angle)) {
+                    return accentCount + ' (' + (this.userCounts[this.angle][0] + this.userCounts[this.angle][1]) + ' by you)';
+                }
+                return accentCount;
+            }
         };
     }
 </script>
@@ -94,6 +106,10 @@
                     </span>
                 </template>
             </dd>
+        </div>
+        <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
+            <dt class="text-sm/6 font-medium text-gray-900 dark:text-gray-100">Accents</dt>
+            <dd class="mt-1 text-sm/6 text-gray-700 sm:col-span-2 sm:mt-0 dark:text-gray-400" x-text="getAccentsText"></dd>
         </div>
         <div class="px-4 py-6 sm:grid sm:grid-cols-3 sm:gap-4 sm:px-0">
             <dt class="text-sm/6 font-medium text-gray-900 dark:text-gray-100">Route Setter</dt>
