filter by user sents

--- a/templates/button/filter.html.twig
+++ b/templates/button/filter.html.twig
@@ -18,6 +18,7 @@
                 this.minRating = 1;
                 this.maxRating = 5;
                 this.exclUnrated = false;
+                this.userSent = '';
                 this.dispatch();
             },
             dispatch() {
@@ -30,7 +31,8 @@
                         exclUngraded: this.exclUngraded,
                         minRating: this.minRating,
                         maxRating: this.maxRating,
-                        exclUnrated: this.exclUnrated
+                        exclUnrated: this.exclUnrated,
+                        userSent: this.userSent
                     }
                 );
             },
@@ -41,6 +43,7 @@
             minRating: Alpine.$persist(1),
             maxRating: Alpine.$persist(5),
             exclUnrated: Alpine.$persist(false),
+            userSent: Alpine.$persist(""),
             sortBy: Alpine.$persist("newest")
         }
     }
@@ -168,6 +171,26 @@
                                             <label for="excl_unrated" class="font-medium text-gray-900 dark:text-white">Exclude unrated</label>
                                         </div>
                                     </div>
+                                    {% if app.user %}
+                                    <div class="sm:col-span-3">
+                                        <label for="user_sent" class="block text-sm/6 font-medium text-gray-900 dark:text-white">Sent</label>
+                                        <div class="mt-2 grid grid-cols-1">
+                                            <select id="user_sent" name="user_sent" @change="changeValue('userSent', $event.target.value)" class="col-start-1 row-start-1 w-full appearance-none rounded-md bg-white py-1.5 pr-8 pl-3 text-base text-gray-900 outline-1 -outline-offset-1 outline-gray-300 focus:outline-2 focus:-outline-offset-2 focus:outline-emerald-600 sm:text-sm/6 dark:bg-white/5 dark:text-white dark:outline-white/10 dark:*:bg-gray-800 dark:focus:outline-emerald-500">
+                                                {% set showOptions = [{'label': 'All', 'value': 'all'}, {'label': 'Sent', 'value': 'sent'}, {'label': 'Not Sent', 'value': 'notsent'}] %}
+                                                {% for option in showOptions %}
+                                                    <option :selected="userSent == '{{ option.value }}'" value="{{ option.value }}">{{ option.label }}</option>
+                                                {% endfor %}
+                                                {% if is_symmetric %}
+                                                    <option :selected="userSent == 'sentboth'" value="sentboth">Sent Both</option>
+                                                    <option :selected="userSent == 'onlyone'" value="onlyone">Only one</option>
+                                                {% endif %}
+                                            </select>
+                                            <svg class="pointer-events-none col-start-1 row-start-1 mr-2 size-5 self-center justify-self-end text-gray-500 sm:size-4 dark:text-gray-400" viewBox="0 0 16 16" fill="currentColor" aria-hidden="true" data-slot="icon">
+                                                <path fill-rule="evenodd" d="M4.22 6.22a.75.75 0 0 1 1.06 0L8 8.94l2.72-2.72a.75.75 0 1 1 1.06 1.06l-3.25 3.25a.75.75 0 0 1-1.06 0L4.22 7.28a.75.75 0 0 1 0-1.06Z" clip-rule="evenodd" />
+                                            </svg>
+                                        </div>
+                                    </div>
+                                    {% endif %}
                                     <div class="sm:col-span-3">
                                         <label for="sort_by" class="block text-sm/6 font-medium text-gray-900 dark:text-white">Sort By</label>
                                         <div class="mt-2 grid grid-cols-1">
