--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -4,17 +4,21 @@
 
 {% block main %}
 {% if route_count > 0 %}
-<dl class="grid grid-cols-1 gap-5 sm:grid-cols-3">
-    <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow-sm sm:p-6 dark:bg-gray-800/75 dark:inset-ring dark:inset-ring-white/10">
-      <dt class="truncate text-sm font-medium text-gray-500 dark:text-gray-400">Number of routes</dt>
+<dl class="gap-5 flex flex-col sm:flex-row">
+    <div class="grow overflow-hidden rounded-lg bg-white px-4 py-5 shadow-sm sm:p-6 dark:bg-gray-800/75 dark:inset-ring dark:inset-ring-white/10">
+      <dt class="truncate text-sm font-medium text-gray-500 dark:text-gray-400">Routes</dt>
       <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">{{ route_count }}</dd>
     </div>
-    <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow-sm sm:p-6 dark:bg-gray-800/75 dark:inset-ring dark:inset-ring-white/10">
-      <dt class="truncate text-sm font-medium text-gray-500 dark:text-gray-400">Easist route</dt>
+    <div class="grow overflow-hidden rounded-lg bg-white px-4 py-5 shadow-sm sm:p-6 dark:bg-gray-800/75 dark:inset-ring dark:inset-ring-white/10">
+      <dt class="truncate text-sm font-medium text-gray-500 dark:text-gray-400">Accents</dt>
+      <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">{{ log_count }}</dd>
+    </div>
+    <div class="grow overflow-hidden rounded-lg bg-white px-4 py-5 shadow-sm sm:p-6 dark:bg-gray-800/75 dark:inset-ring dark:inset-ring-white/10">
+      <dt class="truncate text-sm font-medium text-gray-500 dark:text-gray-400">Easist</dt>
       <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">{{ easiest.value }}</dd>
     </div>
-    <div class="overflow-hidden rounded-lg bg-white px-4 py-5 shadow-sm sm:p-6 dark:bg-gray-800/75 dark:inset-ring dark:inset-ring-white/10">
-      <dt class="truncate text-sm font-medium text-gray-500 dark:text-gray-400">Hardest route</dt>
+    <div class="grow overflow-hidden rounded-lg bg-white px-4 py-5 shadow-sm sm:p-6 dark:bg-gray-800/75 dark:inset-ring dark:inset-ring-white/10">
+      <dt class="truncate text-sm font-medium text-gray-500 dark:text-gray-400">Hardest</dt>
       <dd class="mt-1 text-3xl font-semibold tracking-tight text-gray-900 dark:text-white">{{ hardest.value }}</dd>
     </div>
 </dl>
